------------------------------------------------------
Version 1.8.9 - 2.0.4
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- None
------------------------------------------------------
Version 1.8.9 - 2.0.3
------------------------------------------------------
Additions
- None

Changes
- The restocking upgrade no longer sorts the backpack when restocking.
    - Temporary "bug" introduced, where if you pick up items on the ground that are larger than the stack to resupply and you have a filter they will go in the filter and not resupply.
    - You don't lose any items, and it is a specific uncommon-ish case, but the player has to pick something up to actually resupply in that case, which isn't ideal. Will be fixed in next version.

Bug Fixes
- The Nesting Upgrade should actually work properly now.
------------------------------------------------------
Version 1.8.9 - 2.0.2
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- Fixed forge gradle not reobfuscating for some unknown reason O.o
    - Closes #47
------------------------------------------------------
Version 1.8.9 - 2.0.1
------------------------------------------------------
Additions
- None

Changes
- The backpack is less visible/obtrusive if in first person perspective.
- (Internal) Changed backpackSpawnedMap to be ItemStacks and EntityBackpacks so that threading errors are less likely as the ItemStack/Equipped backpack can be obtained from the IEEP.

Bug Fixes
- Made client messages threaded so the backpack textures update properly.
- Fixed the current backpack (the one open) saving as the equipped backpack.
------------------------------------------------------
Version 1.8.9 - 2.0.0 (versioning: major-minor-build)
------------------------------------------------------
Initial Port to Minecraft 1.8.9 as a rewrite (and I rewrote *a lot*)

Additions (in relation to 1.7.10 - 1.2.15)