@@ -8,6 +8,9 @@ import javax.annotation.Nonnull;
 
 public class AddUpgradeRecipeHandler implements IRecipeHandler<BackpackAddUpgradeRecipe> {
 
+//    public AddUpgradeRecipeHandler(){
+//    }
+
     @Nonnull
     @Override
     public Class<BackpackAddUpgradeRecipe> getRecipeClass() {
