@@ -15,8 +15,7 @@ import gr8pefish.ironbackpacks.config.ConfigHandler;
 import gr8pefish.ironbackpacks.items.backpacks.ItemBackpack;
 import gr8pefish.ironbackpacks.items.craftingItems.ItemCrafting;
 import gr8pefish.ironbackpacks.items.upgrades.ItemUpgrade;
-import gr8pefish.ironbackpacks.registry.recipes.BackpackTierRecipes;
-import gr8pefish.ironbackpacks.registry.recipes.RecipeRegistry;
+import gr8pefish.ironbackpacks.libs.recipes.BackpackTierRecipes;
 import gr8pefish.ironbackpacks.util.IronBackpacksConstants;
 import gr8pefish.ironbackpacks.util.helpers.InventoryRenderHelper;
 import net.minecraft.item.Item;
